customizer looks nice

--- a/src/Frontend/CSS/customizer.css
+++ b/src/Frontend/CSS/customizer.css
@@ -3,6 +3,131 @@ body {
     font-family: Georgia;
     position: center;
 }
+.redbtn{
+    -moz-box-shadow:inset 0px 1px 0px 0px orangered;
+    -webkit-box-shadow:inset 0px 1px 0px 0px orangered;
+    box-shadow:inset 0px 1px 0px 0px orangered;
+    background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, orangered), color-stop(1, red));
+    background:-moz-linear-gradient(top, orangered 5%, red 100%);
+    background:-webkit-linear-gradient(top, orangered 5%, red 100%);
+    background:-o-linear-gradient(top, orangered 5%, red 100%);
+    background:-ms-linear-gradient(top, orangered 5%, red 100%);
+    background:linear-gradient(to bottom, orangered 5%, red 100%);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#007dc1', endColorstr='#0061a7',GradientType=0);
+    background-color:orangered;
+    -moz-border-radius:3px;
+    -webkit-border-radius:3px;
+    border-radius:3px;
+    border:1px solid red;
+    display:inline-block;
+    cursor:pointer;
+    color:#ffffff;
+    font-family:Arial;
+    font-size:13px;
+    padding:6px 24px;
+    text-decoration:none;
+    text-shadow:0px 1px 0px red;
+}
+.bluebtn{
+    -moz-box-shadow:inset 0px 1px 0px 0px #54a3f7;
+    -webkit-box-shadow:inset 0px 1px 0px 0px #54a3f7;
+    box-shadow:inset 0px 1px 0px 0px #54a3f7;
+    background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #007dc1), color-stop(1, #0061a7));
+    background:-moz-linear-gradient(top, #007dc1 5%, #0061a7 100%);
+    background:-webkit-linear-gradient(top, #007dc1 5%, #0061a7 100%);
+    background:-o-linear-gradient(top, #007dc1 5%, #0061a7 100%);
+    background:-ms-linear-gradient(top, #007dc1 5%, #0061a7 100%);
+    background:linear-gradient(to bottom, #007dc1 5%, #0061a7 100%);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#007dc1', endColorstr='#0061a7',GradientType=0);
+    background-color:#007dc1;
+    -moz-border-radius:3px;
+    -webkit-border-radius:3px;
+    border-radius:3px;
+    border:1px solid #124d77;
+    display:inline-block;
+    cursor:pointer;
+    color:#ffffff;
+    font-family:Arial;
+    font-size:13px;
+    padding:6px 24px;
+    text-decoration:none;
+    text-shadow:0px 1px 0px #154682;
+}
+.greenbtn{
+    -moz-box-shadow:inset 0px 1px 0px 0px lime;
+    -webkit-box-shadow:inset 0px 1px 0px 0px lime;
+    box-shadow:inset 0px 1px 0px 0px lime;
+    background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, lime), color-stop(1, green));
+    background:-moz-linear-gradient(top, lime 5%, green 100%);
+    background:-webkit-linear-gradient(top, lime 5%, green 100%);
+    background:-o-linear-gradient(top, lime 5%, green 100%);
+    background:-ms-linear-gradient(top, lime 5%, green 100%);
+    background:linear-gradient(to bottom, lime 5%, green 100%);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#007dc1', endColorstr='#0061a7',GradientType=0);
+    background-color:lime;
+    -moz-border-radius:3px;
+    -webkit-border-radius:3px;
+    border-radius:3px;
+    border:1px solid green;
+    display:inline-block;
+    cursor:pointer;
+    color:#ffffff;
+    font-family:Arial;
+    font-size:13px;
+    padding:6px 24px;
+    text-decoration:none;
+    text-shadow:0px 1px 0px green;
+}
+.yellowbtn{
+    -moz-box-shadow:inset 0px 1px 0px 0px greenyellow;
+    -webkit-box-shadow:inset 0px 1px 0px 0px greenyellow;
+    box-shadow:inset 0px 1px 0px 0px greenyellow;
+    background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, greenyellow), color-stop(1, yellow));
+    background:-moz-linear-gradient(top, greenyellow 5%, yellow 100%);
+    background:-webkit-linear-gradient(top, greenyellow 5%, yellow 100%);
+    background:-o-linear-gradient(top, greenyellow 5%, yellow 100%);
+    background:-ms-linear-gradient(top, greenyellow 5%, yellow 100%);
+    background:linear-gradient(to bottom, greenyellow 5%, yellow 100%);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#007dc1', endColorstr='#0061a7',GradientType=0);
+    background-color:greenyellow;
+    -moz-border-radius:3px;
+    -webkit-border-radius:3px;
+    border-radius:3px;
+    border:1px solid yellow;
+    display:inline-block;
+    cursor:pointer;
+    color:black;
+    font-family:Arial;
+    font-size:13px;
+    padding:6px 24px;
+    text-decoration:none;
+    text-shadow:0px 1px 0px yellow;
+}
+.greybtn{
+    -moz-box-shadow:inset 0px 1px 0px 0px darkgrey;
+    -webkit-box-shadow:inset 0px 1px 0px 0px darkgrey;
+    box-shadow:inset 0px 1px 0px 0px darkgrey;
+    background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, darkgrey), color-stop(1, grey));
+    background:-moz-linear-gradient(top, darkgrey 5%, grey 100%);
+    background:-webkit-linear-gradient(top, darkgrey 5%, grey 100%);
+    background:-o-linear-gradient(top, darkgrey 5%, grey 100%);
+    background:-ms-linear-gradient(top, darkgrey 5%, grey 100%);
+    background:linear-gradient(to bottom, darkgrey 5%, grey 100%);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#007dc1', endColorstr='#0061a7',GradientType=0);
+    background-color:darkgrey;
+    -moz-border-radius:3px;
+    -webkit-border-radius:3px;
+    border-radius:3px;
+    border:1px solid darkgrey;
+    display:inline-block;
+    cursor:pointer;
+    color:#ffffff;
+    font-family:Arial;
+    font-size:13px;
+    padding:6px 24px;
+    text-decoration:none;
+    text-shadow:0px 1px 0px #154682;
+}
 .dropbtn {
     background-color: dodgerblue;
     color: white;
